finished views and models and controllers and added bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class = "container">
 <%= render 'layouts/nav' %>
 <%= render 'layouts/alerts' %>
 <%= yield %>
-
+</div>
 </body>
 </html>
