--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,5 +1,7 @@
 <h1> All photos </h1>
 
 <%= render 'customphoto' %>
-
-<%= link_to 'add a photo', new_photo_path%>
+<br>
+<div class = "btn-toolbar">
+<%= link_to 'add a photo', new_photo_path, :class => "btn-sm btn-success"%>
+</div>
