--- a/app/views/photos/my_photos.html.erb
+++ b/app/views/photos/my_photos.html.erb
@@ -1,3 +1,6 @@
 <h1><%= current_user.name%>'s Photos </h1>
 <%= render 'customphoto' %>
-<%= link_to 'add a photo', new_photo_path%>
+<br>
+<div class = "btn-toolbar">
+<%= link_to 'add a photo', new_photo_path, :class => "btn-sm btn-success" %>
+</div>
