--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,5 +1,11 @@
-<%= simple_form_for @photo do |f| %>
+<%= simple_form_for(@photo, multipart: true) do |f| %>
+  <%= f.file_field :avatar %>
   <%= f.input :caption %>
   <%= f.input :public %>
-  <%= f.button :submit %>
+  
+  <%= f.button :submit, :class => "btn-toolbar" %>
+ 
+  
 <% end %>
+
+
