--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,3 +1,7 @@
 <h1>edit photo </h1>
 
 <%= render 'form' %>
+<br>
+<div class = "btn-toolbar">
+	<%= link_to "Nevermind", @photo, :class => "btn-sm btn-info", :type => "button" %>
+</div>
