--- a/app/views/photos/_customphoto.html.erb
+++ b/app/views/photos/_customphoto.html.erb
@@ -1,12 +1,18 @@
 <% @photos.each do |photo| %>
-	<p>caption: <%= photo.caption%></p>
-	<br>
-	<div class = "btn-toolbar">
-	<%=link_to "show", photo_path(photo),:class => "btn-sm btn-info" %>
-	<% if @is_owner %>
-	<%= link_to "edit", edit_photo_path(photo), :class => "btn-sm btn-info" %>
-	<%= link_to "delete", photo, :class => "btn-sm btn-info", method: :delete, data: { confirm: 'Are you sure?' } %>
-	<% end %>
+	<div class = "row">
+		<div class = "col-md-3">
+			<%= image_tag photo.avatar.url(:thumb) %>
+		</div>
+			<div class = "col-md-6">
+			<p>caption: <%= photo.caption%></p>
+			<div class = "btn-toolbar">
+				<%=link_to "show", photo_path(photo),:class => "btn-sm btn-info" %>
+					<% if @is_owner %>
+						<%= link_to "edit", edit_photo_path(photo), :class => "btn-sm btn-info" %>
+						<%= link_to "delete", photo, :class => "btn-sm btn-info", method: :delete, data: { confirm: 'Are you sure?' } %>
+					<% end %>
+			</div>
+			</div>
 	</div>
 	<hr class="intro-divider">
 <% end %>
