--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,21 +1,25 @@
+<div class = "row">
+	<div class = "col-md-6">
+		<br>
+		<p><%= image_tag @photo.avatar.url, class: "photo_img" %></p>
+	</div>
+	<div class = "col-md-6">
+		<div class = "photo-head">
+		<h1><%= @photo.caption %></h1>
+		<%= link_to_if(!@is_liked,'<i class="fa fa-heart-o"></i>'.html_safe, like_photo_path )%> <%= @photo.likes %>
 
+		</div>
 
-<p><%= image_tag @photo.avatar.url, class: "photo_img" %></p>
-<br>
-
-<div class = "photo-head">
-<h1><%= @photo.caption %></h1>
-<%= link_to_if(!@is_liked,'<i class="fa fa-heart-o"></i>'.html_safe, like_photo_path )%> <%= @photo.likes %>
+	<p class = "lead">taken by <%=User.find(@photo.user_id).name%></p>
+	<% if @is_owner %>
+		<div class = "btn-toolbar">
+		<%= link_to "edit", edit_photo_path(@photo), :class => "btn-sm btn-info" %>
+		<%= link_to "delete", @photo, :class => "btn-sm btn-info", method: :delete, data: { confirm: 'Are you sure?' } %>
+		</div>
+	<% end %>
+	</div>
 
 </div>
-
-<p class = "lead">taken by <%=User.find(@photo.user_id).name%></p>
-<% if @is_owner %>
-<div class = "btn-toolbar">
-<%= link_to "edit", edit_photo_path(@photo), :class => "btn-sm btn-info" %>
-<%= link_to "delete", @photo, :class => "btn-sm btn-info", method: :delete, data: { confirm: 'Are you sure?' } %>
-</div>
-<% end %>
 
 <h4>Comments</h4>
 <hr class="intro-divider">
